--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="dog-details">
                     <h3>Description:</h3>
                     <p>
-                        This gentle dog is aloof toward her owner, and never comes when called.
+                        This gentle loving dog is aloof toward her owner, and never comes when called.
                         She always acts as though any stranger she meets will harm her,
                         and dislikes other animals.
                     </p>
